# blog_ai_agent

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/blog_agent/: __init__.py  config.py  digest.py  discovery.py  feeds.py  firefox_history.py  main.py  models.py  preferences.py  storage.py  web.py
src/blog_agent/templates/: index.html
tests/: test_config.py  test_digest.py  test_discovery.py  test_feeds.py  test_firefox_history.py  test_models.py  test_preferences.py  test_storage.py  test_web.py
