[project]
name = "blog-ai-agent"
version = "0.1.0"
description = "AI agent that discovers and tracks new blog posts from your favorite blogs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "rich>=13.0",
    "click>=8.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
blog-agent = "blog_agent.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.0",
    "flake8>=7.0",
    "black>=24.0",
    "isort>=5.13",
    "mypy>=1.0",
    "responses>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blog_agent"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
